2006-04-02  David Hampton  <hampton@employees.org>

	* src/register/ledger-core/split-register-model.c: Change the
	access key on the "Change Split" button.  Fixes 336836.

	* src/gnome-utils/gnc-main-window.c: Change the access key on the
	Transaction menu to not conflict with the Tools menu.  Fixes
	336829.

2006-04-02  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/dialog-account.c: Set search column for account
	  types lists interactive search. Fix 336833.

2006-04-01  David Hampton  <hampton@employees.org>

	* src/backend/file/gnc-account-xml-v2.c:
	* src/scm/price-quotes.scm:
	* src/engine/Account.c:
	* src/engine/engine-utilities.scm:
	* src/engine/gnc-commodity.c: Mike Alexander's patch to get
	currency quote retrieval working again, and some other small
	currency quote bugfixes.  Closes 333572.

2006-03-31  David Hampton  <hampton@employees.org>

	* src/engine/Transaction.c: Restore sorting transactions by date
	posted.  Fixes 335190.

2006-03-30  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-reset-warnings.c: Fix the dialog so that
	the 'Cancel' button cancels all changes made since the dialog was
	opened. (c.f. The HIG section on explicit apply windows.)  The
	'OK' button is now always sensitive.  Fixes #336629 and #336630.

	* src/backend/file/io-gncxml-v2.c:
	* src/gnome-utils/gnc-main-window.c:
	* src/gnome-utils/gnc-window.c: Work around the fact that a
	validating XML parser barfs on gnucash's use of an attribute in an
	undefined namespace.

2006-03-30  Joshua Sled  <jsled@asynchronous.org>

	* src/calculation/expression_parser.c (primary_exp):
	* src/app-utils/test/test-exp-parser.c (test_parser): Tighten the
	grammar around quoted strings. Test-case fixes.
	
	* src/calculation/expression_parser.c (primary_exp): 
	* src/app-utils/test/test-exp-parser.c (test_parser): Add basic
	validation and test-cases for invalid expressions.  Bugs#308554,
	334811.
	
	* accounts/C/acctchrt_checkbook.gnucash-xea: Revoke placeholder