@@ -1,3 +1,13 @@
+2006-04-03  David Hampton  <hampton@employees.org>
+
+	* src/backend/file/sixtp-dom-generators.c:
+	* src/backend/file/gnc-commodity-xml-v2.c:
+	* src/gnome-utils/dialog-commodity.c:
+	* src/gnome/dialog-commodities.c:
+	* src/engine/gnc-commodity.[ch]: Use the name "Currency"
+	internally instead of ISO4217.  Make it possible to edit the "get
+	quotes" flag on currencies.
+
 2006-04-02  David Hampton  <hampton@employees.org>
 
 	* src/register/ledger-core/split-register-model.c: Change the
